--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -20,7 +20,43 @@
 
 .list {
   display: flex;
+  align-items: center;
+  justify-content: flex-end;
   flex: 1;
   gap: 20px;
   font-size: 20px;
+}
+
+@media screen and (max-width: 1536px) {
+  .logo {
+    font-size: 32px;
+  }
+  .list {
+    font-size: 16px;
+    gap: 15px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .social {
+    display: none;
+  }
+  .logo {
+    text-align: start;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .link {
+    display: none;
+  }
 }
