--- a/src/components/themeToggle/themeToggle.module.css
+++ b/src/components/themeToggle/themeToggle.module.css
@@ -5,18 +5,16 @@
   width: 40px;
   height: 20px;
   border-radius: 20px;
-  background-color: black;
   position: relative;
   padding: 0 3px;
+  cursor: pointer;
 }
 
 .ball {
   width: 15px;
   height: 15px;
   border-radius: 15px;
-  background-color: white;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: 3px;
 }
