--- a/src/components/categoryList/categoryList.module.css
+++ b/src/components/categoryList/categoryList.module.css
@@ -1,2 +1,79 @@
 .container {
 }
+
+.title {
+  margin: 50px 0;
+}
+
+.categories {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.category {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 15%;
+  height: 80px;
+  text-transform: capitalize;
+  border-radius: 10px;
+}
+
+.img {
+  border-radius: 50%;
+}
+
+.style {
+  background-color: #57c4ff31;
+}
+
+.fashion {
+  background-color: #db85c731;
+}
+
+.food {
+  background-color: #7fb88133;
+}
+
+.travel {
+  background-color: #ff795736;
+}
+
+.culture {
+  background-color: #ffb84f45;
+}
+
+.coding {
+  background-color: #5e4fff31;
+}
+
+@media screen and (max-width: 1536px) {
+}
+
+@media screen and (max-width: 1280px) {
+  .category {
+    width: 18%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .category {
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .category {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .category {
+    width: 100%;
+  }
+}
