--- a/src/components/featured/featured.module.css
+++ b/src/components/featured/featured.module.css
@@ -1,2 +1,101 @@
 .container {
+  margin-top: 30px;
+}
+
+.title {
+  font-size: 96px;
+}
+
+.post {
+  display: flex;
+  align-items: center;
+  margin-top: 60px;
+  gap: 50px;
+}
+
+.imgContainer {
+  height: 500px;
+  flex: 1;
+  position: relative;
+}
+
+.img {
+  object-fit: cover;
+}
+
+.textContainer {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.postTitle {
+  font-size: 40px;
+}
+
+.postDesc {
+  font-size: 20px;
+  font-weight: 300;
+  color: var(--soft-text-color);
+}
+
+.button {
+  padding: 16px 20px;
+  border: none;
+  border-radius: 5px;
+  width: max-content;
+}
+
+@media screen and (max-width: 1536px) {
+  .title {
+    font-size: 76px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .title {
+    font-size: 63px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .title {
+    font-size: 50px;
+  }
+  .post {
+    flex-direction: column;
+  }
+  .imgContainer {
+    flex: none;
+    width: 100%;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .post {
+    gap: 25px;
+  }
+  .title {
+    font-size: 40px;
+  }
+  .postTitle {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .post {
+    margin-top: 40px;
+  }
+  .title {
+    font-size: 35px;
+  }
+  .imgContainer {
+    height: 200px;
+  }
+  .postTitle {
+    font-size: 27px;
+  }
 }
