--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -1,2 +1,28 @@
 .container {
+  flex: 2;
+  margin-top: 60px;
+}
+
+.subTitle {
+  color: gray;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.title {
+  font-size: 28px;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  margin: 35px 0 60px;
+  gap: 35px;
+}
+
+.categoryList {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 35px 0 60px;
+  gap: 20px;
 }
