--- a/src/components/authLinks/authLinks.module.css
+++ b/src/components/authLinks/authLinks.module.css
@@ -26,6 +26,7 @@
   width: 100%;
   height: calc(100vh - 100px);
   background-color: var(--bg);
+  z-index: 100;
 }
 
 @media screen and (max-width: 640px) {
