--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -42,3 +42,20 @@
   width: max-content;
   padding: 2px 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+  }
+  .imgContainer {
+    flex: none;
+    width: 100%;
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
