--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,2 +1,83 @@
 .container {
+  margin-top: 50px;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--soft-text-color);
+}
+
+.info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.logoText {
+  font-size: 24px;
+}
+
+.desc {
+  font-weight: 300;
+}
+
+.icons {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.links {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  gap: 100px;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-weight: 300;
+}
+
+.listTitle {
+  font-weight: bold;
+}
+
+@media screen and (max-width: 1280px) {
+  .links {
+    gap: 50px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+  }
+  .desc {
+    font-size: 17px;
+    text-align: justify;
+  }
+  .links {
+    margin-top: 40px;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .list {
+    font-size: 17px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
 }
