--- a/src/components/authLinks/authLinks.module.css
+++ b/src/components/authLinks/authLinks.module.css
@@ -7,6 +7,15 @@
   cursor: pointer;
 }
 
+.signOut {
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  color: inherit;
+  font-family: '__Inter_Fallback_725fdb', '__Inter_Fallback_Fallback_725fdb';
+  cursor: pointer;
+}
+
 .line {
   width: 100%;
   height: 2px;
